"tab.categories.name" = "CATEGORIES";

"tab.favorites.name" = "FAVORITES";

"history.header.name" = "RECENT SEARCHES";

"history.header.empty.name" = "NO RECENT SEARCHES";

"history.record.removeButton.name" = "Remove";

"search.textfield.placeholder" = "Where to?";

"search.error.noInternet.name" = "NO INTERNET CONNECTION";

"search.error.noInternet.description" = "You’re offline. Try to reconnect.";

"search.error.generic.name" = "ERROR";

"search.error.generic.description" = "Something went wrong.";

"search.error.server.name" = "SERVER ERROR";

"search.error.server.description" = "Something went wrong.";

"favorite.cell.action.rename.name" = "Rename";

"favorite.cell.action.editLocation.name" = "Edit location";

"favorite.cell.action.removeLocation.name" = "Remove location";

"favorite.cell.deleteRecord.name" = "Delete";

"favorite.cell.cancel.name" = "Cancel";

"favorite.cell.address.placeholder" = "Tap me to set the address";

"favorite.cell.default.home.name" = "Home";

"favorite.cell.default.work.name" = "Work";

"favorite.details.title" = "Edit details";

"favorite.details.cancelButton.name" = "Cancel";

"favorite.details.doneButton.name" = "Done";

"search.feedback.reportButton.name" = "Report";

"search.feedback.descriptionField.name" = "Description (optional)";

"search.feedback.submitButton.name" = "Submit";

"search.feedback.title" = "Send Feedback";

"search.feedback.reason.incorrectNameOption.name" = "Incorrect name";

"search.feedback.reason.incorrectAddressOption.name" = "Incorrect address";

"search.feedback.reason.incorrectLocationOption.name" = "Incorrect location";

"search.feedback.reason.missingResultOption.name" = "Missing result";

"search.feedback.reason.other.name" = "Other";

"search.feedback.error.name" = "Feedback Error";

"search.feedback.error.message" = "Sorry, for some reason this feedback can not be submitted";

"search.feedback.confirmation.title" = "Feedback Confirmation";

"search.feedback.confirmation.message" = "Submit Yours Feedback?";

"search.general.ok" = "OK";

"search.general.cancel" = "Cancel";

"favorite.cell.addNew.name" = "ADD TO FAVORITES";

"favorite.details.nameField.header" = "NAME";

"favorite.details.address.header" = "ADDRESS";

"search.error.noSuggestions.name" = "NO SUGGESTIONS FOUND";

"search.error.noConnection.retryButton" = "TAP TO RETRY";
