...
}

class UserFavoriteCell: UITableViewCell {
    @IBOutlet private var iconImageView: UIImageView!
    @IBOutlet private var titleLabel: UILabel!
    @IBOutlet private var addressLabel: UILabel!
    @IBOutlet private var moreButton: UIButton!

    var favorite: FavoriteEntry!
    weak var delegate: UserFavoriteCellDelegate?

    override func willMove(toWindow newWindow: UIWindow?) {
        super.willMove(toWindow: newWindow)
...
        iconImageView.image = favorite.icon.withRenderingMode(.alwaysTemplate)
        iconImageView.adjustsImageSizeForAccessibilityContentSizeCategory = true
        titleLabel.text = favorite.name

        accessibilityIdentifier = favorite.name
        moreButton.accessibilityIdentifier = "moreButton"
        addressLabel.accessibilityIdentifier = "address"

        addressLabel.text = nil

        // Display existing address if available
        // Display placeholder for templates like 'home' or 'work'
        if let address = favorite.userFavorite?.address {
...
